# whetstone

./: .eslintrc.json  .gitignore  .prettierignore  .vscodeignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md  dist-workspace.toml  esbuild.js  package-lock.json  package.json  tsconfig.json  tsconfig.test.json  vitest.config.ts
.github/workflows/: ci.yml  pages.yml  redteam.yml  release.yml  tui-ci.yml
composer/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
composer/dev/: debug-app-cdp.mjs  debug-cdp.mjs  debug-coach-cdp.mjs  debug-harper.html
composer/src/: main.ts  style.css
composer/test/: coach.service.test.ts  coachChat.test.ts  coaching.test.ts  disclosure.test.ts  draftStore.test.ts  glm.live.test.ts  grammar.test.ts  guard.test.ts  labels.test.ts  localService.test.ts  mirror.test.ts  ngram.test.ts  ownership.test.ts  pushCadence.test.ts  quarantine.test.ts  quarantine.view.test.ts  serviceSeam.test.ts  teachBack.test.ts  typingBurst.test.ts
docs/: index.html
docs/assets/: forge.css  site.css
examples/: screenshots.rs
src/: cli.rs  commands.ts  container.ts  extension.ts  lib.rs  main.rs  screenshot.rs
src/brief/: index.ts
src/coach/: client.rs  config.rs  judge.rs  mod.rs  provider.rs
src/coaching/: index.ts  schema.ts
src/consent/: index.ts
src/core/: coaching.rs  disclosure.rs  guard.rs  mirror.rs  mod.rs  ngram.rs  ownership.rs  process_event.rs  prompts.rs
src/dev/: cli.ts  main.ts
src/editor/: buffer.rs  mod.rs  quarantine.rs
src/friction/: claimFirst.ts  control.ts  dial.ts  index.ts  mirror.ts  paste.ts  presets.ts  pushCadence.ts  teachBack.ts
src/grammar/: codeActions.ts  diagnostics.ts  dismissals.ts  engine.ts  explainRule.ts  harper.rs  hover.ts  index.ts  latexMask.ts  mod.rs  worker.ts
src/guard/: deterministic.ts  index.ts  injection.ts  judge.ts
src/ledger/: chain.ts  checkpoints.ts  detector.ts  disclosure.ts  documents.ts  index.ts  report.ts  store.ts
src/markdown/: mod.rs
src/providers/: index.ts  openaiCompatible.ts  prompts.ts  registry.ts  types.ts
src/shared/: config.ts  constants.ts  crypto.ts  index.ts  json.ts  secrets.ts  types.ts
src/telemetry/: index.ts  redact.ts
src/test/: runTest.ts
src/ui/: app.rs  coachingView.ts  commands.ts  index.ts  ledgerView.ts  menu.rs  mod.rs  settings.rs  testkit.rs  theme.rs
test/redteam/: gate.test.ts  gate.ts
test/support/: fixtures.ts  json-gen.ts  vscode-stub.ts
test/unit/: brief.test.ts  (+32 more)
tui/: Cargo.toml  README.md  sample.qmd
tui/src/: lib.rs  main.rs
tui/src/coach/: client.rs  config.rs  history.rs  mod.rs
tui/src/core/: disclosure.rs  guard.rs  labels.rs  mirror.rs  ngram.rs  ownership.rs  process_event.rs  prompts.rs
tui/src/editor/: buffer.rs  quarantine.rs  transaction.rs
tui/src/grammar/: mod.rs
tui/src/instruments/: mod.rs
tui/src/markdown/: math.rs  mod.rs  render.rs
tui/src/ui/: app.rs  menu.rs  mod.rs  settings.rs  theme.rs
(+66 files in other folders)
