[package]
name = "whetstone-tui"
version = "0.1.1"
edition = "2024"
description = "Whetstone — a friction-first Quarto markdown editor for the terminal"
license = "MIT"
repository = "https://github.com/sjvrensburg/whetstone"
homepage = "https://sjvrensburg.github.io/whetstone/"

[dependencies]
# Core domain (pure ports)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
thiserror = "2"

# Editor + TUI (M1)
ratatui = "0.30"
crossterm = { version = "0.29", features = ["bracketed-paste"] }
ropey = "1.6"
unicode-width = "0.2"
base64 = "0.22"
pulldown-cmark = "0.13"
clap = { version = "4", features = ["derive"] }
anyhow = "1"

# Grammar (M2) — local checking, zero external API calls
harper-core = "1.2"

# Coach (M3) — OpenAI-compatible Chat Completions over any base URL
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
futures = "0.3"

# Screenshots (optional) — render the TUI to a PNG in-process, no external tools.
image = { version = "0.25", default-features = false, features = ["png"], optional = true }
ab_glyph = { version = "0.2", optional = true }

[features]
# Reusable headless-driving harness (also compiled under `cargo test`).
harness = []
# In-process PNG screenshot rendering (pulls in `image` + `ab_glyph`).
screenshots = ["dep:image", "dep:ab_glyph", "harness"]

# The screenshot renderer is a dev/docs tool, not a shipped binary — an example
# so it never lands in release archives or the Homebrew formula.
[[example]]
name = "screenshots"
path = "examples/screenshots.rs"
required-features = ["screenshots"]

[dev-dependencies]
pretty_assertions = "1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
