[package]
name = "whetstone-tui"
version = "0.1.0"
edition = "2024"
description = "Whetstone — a friction-first Quarto markdown editor for the terminal"

[dependencies]
# Core domain (pure ports)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
thiserror = "2"

# Editor + TUI (M1)
ratatui = "0.30"
crossterm = { version = "0.29", features = ["bracketed-paste"] }
ropey = "1.6"
unicode-width = "0.2"
pulldown-cmark = "0.13"
clap = { version = "4", features = ["derive"] }
anyhow = "1"

# Grammar (M2) — local checking, zero external API calls
harper-core = "1.2"

# Coach (M3) — OpenAI-compatible Chat Completions over any base URL
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
futures = "0.3"

[dev-dependencies]
pretty_assertions = "1"
